Miseà  jour gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 main
+convocations.dat
+convocations.dat1
+convocations.dat2
+jures.dat
+jures.dat1
+salles.sat
+sallesTemp.dat
+seances.dat
+seances.dat1
+seances.dat2
