--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 main
 convocations.dat
-convocations.dat1
-convocations.dat2
+convocations.dat.1
+convocations.dat.2
 jures.dat
-jures.dat1
+jures.dat.1
 salles.sat
 sallesTemp.dat
 seances.dat
-seances.dat1
-seances.dat2
+seances.dat.1
+seances.dat.2
+affaires.dat
+affairesTemp.dat
